--- a/python/contest-scoring.ipynb
+++ b/python/contest-scoring.ipynb
@@ -335,6 +335,431 @@
    "source": [
     "df.to_csv(\"../2024/leaderboard/data/submissions2024.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "203bd40f",
+   "metadata": {},
+   "source": [
+    "## Tie breaker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "43b68a5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>leaderboardAlias</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>round_12_rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Katie R</td>\n",
+       "      <td>elder,suarez,hurd,burgum,hutchinson,scott,penc...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Keerit K</td>\n",
+       "      <td>hurd,suarez,burgum,elder,scott,hutchinson,chri...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>djbayko</td>\n",
+       "      <td>suarez,elder,hurd,burgum,hutchinson,pence,chri...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Karla A</td>\n",
+       "      <td>suarez,scott,burgum,hurd,elder,hutchinson,penc...</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  leaderboardAlias                                         prediction  \\\n",
+       "0          Katie R  elder,suarez,hurd,burgum,hutchinson,scott,penc...   \n",
+       "1         Keerit K  hurd,suarez,burgum,elder,scott,hutchinson,chri...   \n",
+       "2          djbayko  suarez,elder,hurd,burgum,hutchinson,pence,chri...   \n",
+       "3          Karla A  suarez,scott,burgum,hurd,elder,hutchinson,penc...   \n",
+       "\n",
+       "   round_12_rank  \n",
+       "0            1.0  \n",
+       "1            1.0  \n",
+       "2            1.0  \n",
+       "3            1.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# there's a 4-way tie for first place\n",
+    "winners = df[df['round_12_rank'] == 1].reset_index()[['leaderboardAlias', 'prediction', 'round_12_rank']]\n",
+    "winners.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6ddbf2c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>leaderboardAlias</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>round_12_rank</th>\n",
+       "      <th>kendallDistanceMinus1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Katie R</td>\n",
+       "      <td>elder,suarez,hurd,burgum,hutchinson,scott,penc...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Keerit K</td>\n",
+       "      <td>hurd,suarez,burgum,elder,scott,hutchinson,chri...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>djbayko</td>\n",
+       "      <td>suarez,elder,hurd,burgum,hutchinson,pence,chri...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Karla A</td>\n",
+       "      <td>suarez,scott,burgum,hurd,elder,hutchinson,penc...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  leaderboardAlias                                         prediction  \\\n",
+       "0          Katie R  elder,suarez,hurd,burgum,hutchinson,scott,penc...   \n",
+       "1         Keerit K  hurd,suarez,burgum,elder,scott,hutchinson,chri...   \n",
+       "2          djbayko  suarez,elder,hurd,burgum,hutchinson,pence,chri...   \n",
+       "3          Karla A  suarez,scott,burgum,hurd,elder,hutchinson,penc...   \n",
+       "\n",
+       "   round_12_rank  kendallDistanceMinus1  \n",
+       "0            1.0                     10  \n",
+       "1            1.0                     10  \n",
+       "2            1.0                     11  \n",
+       "3            1.0                     11  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tie breaker round 1: omit suarez\n",
+    "winners['kendallDistanceMinus1'] = 0\n",
+    "    \n",
+    "# calc kendall distances for every previous round and the current round\n",
+    "for i in winners.index:\n",
+    "    prediction = winners['prediction'][i].replace(\"suarez,\",\"\").split(\",\")[:-1]\n",
+    "    winners['kendallDistanceMinus1'][i] = partialScoring(dropOutOrder[1:], prediction)\n",
+    "    \n",
+    "# still have a tie\n",
+    "winners.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3329a3ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>leaderboardAlias</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>kendallDistanceMinus1</th>\n",
+       "      <th>kendallDistanceMinus2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Katie R</td>\n",
+       "      <td>elder,suarez,hurd,burgum,hutchinson,scott,penc...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Keerit K</td>\n",
+       "      <td>hurd,suarez,burgum,elder,scott,hutchinson,chri...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  leaderboardAlias                                         prediction  \\\n",
+       "0          Katie R  elder,suarez,hurd,burgum,hutchinson,scott,penc...   \n",
+       "1         Keerit K  hurd,suarez,burgum,elder,scott,hutchinson,chri...   \n",
+       "\n",
+       "   kendallDistanceMinus1  kendallDistanceMinus2  \n",
+       "0                     10                      9  \n",
+       "1                     10                     10  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "winners2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7b4ff3b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>leaderboardAlias</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>kendallDistanceMinus1</th>\n",
+       "      <th>kendallDistanceMinus2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Katie R</td>\n",
+       "      <td>elder,suarez,hurd,burgum,hutchinson,scott,penc...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Keerit K</td>\n",
+       "      <td>hurd,suarez,burgum,elder,scott,hutchinson,chri...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  leaderboardAlias                                         prediction  \\\n",
+       "0          Katie R  elder,suarez,hurd,burgum,hutchinson,scott,penc...   \n",
+       "1         Keerit K  hurd,suarez,burgum,elder,scott,hutchinson,chri...   \n",
+       "\n",
+       "   kendallDistanceMinus1  kendallDistanceMinus2  \n",
+       "0                     10                      9  \n",
+       "1                     10                     10  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tie breaker round 2: omit suarez and hurd\n",
+    "\n",
+    "winners2 = winners[winners['kendallDistanceMinus1'] == 10].reset_index()[['leaderboardAlias', 'prediction', 'kendallDistanceMinus1']]\n",
+    "winners2['kendallDistanceMinus2'] = 0\n",
+    "    \n",
+    "# calc kendall distances for every previous round and the current round\n",
+    "for i in winners2.index:\n",
+    "    prediction = winners2['prediction'][i].replace(\"suarez,\",\"\").replace(\"hurd,\",\"\").split(\",\")[:-1]\n",
+    "    winners2['kendallDistanceMinus2'][i] = partialScoring(dropOutOrder[2:], prediction)\n",
+    "\n",
+    "winners2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5f9d45ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>leaderboardAlias</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>kendallDistanceMinus1</th>\n",
+       "      <th>kendallDistanceMinus2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>djbayko</td>\n",
+       "      <td>suarez,elder,hurd,burgum,hutchinson,pence,chri...</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Karla A</td>\n",
+       "      <td>suarez,scott,burgum,hurd,elder,hutchinson,penc...</td>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  leaderboardAlias                                         prediction  \\\n",
+       "0          djbayko  suarez,elder,hurd,burgum,hutchinson,pence,chri...   \n",
+       "1          Karla A  suarez,scott,burgum,hurd,elder,hutchinson,penc...   \n",
+       "\n",
+       "   kendallDistanceMinus1  kendallDistanceMinus2  \n",
+       "0                     11                     10  \n",
+       "1                     11                      9  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tie breaker for 3rd place: omit suarez and hurd\n",
+    "\n",
+    "runnerUps = winners[winners['kendallDistanceMinus1'] == 11].reset_index()[['leaderboardAlias', 'prediction', 'kendallDistanceMinus1']]\n",
+    "runnerUps['kendallDistanceMinus2'] = 0\n",
+    "    \n",
+    "# calc kendall distances for every previous round and the current round\n",
+    "for i in winners2.index:\n",
+    "    prediction = runnerUps['prediction'][i].replace(\"suarez,\",\"\").replace(\"hurd,\",\"\").split(\",\")[:-1]\n",
+    "    runnerUps['kendallDistanceMinus2'][i] = partialScoring(dropOutOrder[2:], prediction)\n",
+    "\n",
+    "runnerUps.head()"
+   ]
   }
  ],
  "metadata": {
